--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "vue": "^3.2.37",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.3"
   },
