--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@tinymce/tinymce-vue": "^4.0.7",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "vue": "^3.2.37",
     "vue-animate-onscroll": "^1.0.8",
     "vue-axios": "^3.4.1",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
