--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
     "vue": "^3.2.37",
     "vue-animate-onscroll": "^1.0.8",
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^4.1.2",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.0.4"
   }
 }
